massive updates to code
Took 2 hours 55 minutes