@@ -1,108 +1,122 @@
-(defproject fulcro-todomvc "1.0.0-SNAPSHOT"
-  :description "TodoMVC implemention using Fulcro"
+(defproject fulcrologic/todomvc "2.0.0-SNAPSHOT"
+  :description "Full-Stack TodoMVC in Fulcro"
+  :license {:name "MIT" :url "https://opensource.org/licenses/MIT"}
   :min-lein-version "2.7.0"
-  :license {:name "MIT"
-            :url  "https://opensource.org/licenses/MIT"}
 
-  :dependencies [[org.clojure/clojure "1.9.0-alpha17"]
+  :dependencies [[org.clojure/clojure "1.9.0-RC2"]
                  [org.clojure/clojurescript "1.9.946"]
-                 [fulcrologic/fulcro "2.0.0-SNAPSHOT"]
+                 [fulcrologic/fulcro "2.0.0-beta5"]
                  [fulcrologic/fulcro-datomic "1.0.0-SNAPSHOT" :exclusions [org.clojure/tools.cli]]
                  [com.datomic/datomic-free "0.9.5561" :exclusions [com.google.guava/guava]]
                  [secretary "1.2.3" :exclusions [com.cemerick/clojurescript.test]]
                  [joda-time "2.9.9"]
                  [clj-time "0.13.0"]
-                 [lein-doo "0.1.7" :scope "test" :exclusions [org.clojure/tools.reader]]
                  [fipp "0.6.12"]
-                 [org.clojure/tools.namespace "0.3.0-alpha4"]
-                 [commons-codec "1.10"]
-                 [com.taoensso/timbre "4.10.0"]
-                 [com.stuartsierra/component "0.3.2"]
-                 [fulcrologic/fulcro-spec "2.0.0-SNAPSHOT" :scope "test"]]
+                 [fulcrologic/fulcro-spec "2.0.0-beta3" :scope "test" :exclusions [fulcrologic/fulcro]]]
 
-  :plugins [[lein-cljsbuild "1.1.7"]
-            [lein-doo "0.1.7" :exclusions [org.clojure/tools.reader]]]
+  :uberjar-name "todomvc.jar"
 
-  :doo {:build "automated-tests"
-        :paths {:karma "node_modules/karma/bin/karma"}}
-
-  :fulcro-i18n {:default-locale        "en-US"
-                :translation-namespace fulcro-todomvc.i18n
-                :source-folder         "src/client"
-                :target-build          "i18n"}
-
-  :clean-targets ^{:protect false} ["resources/public/js/compiled" "target" "i18n/out"]
   :source-paths ["src/main"]
   :test-paths ["src/test"]
+  :clean-targets ^{:protect false} ["target" "resources/public/js" "resources/private"]
 
-  :cljsbuild {:builds [{:id           "dev"
-                        :source-paths ["dev/client" "src/main"]
-                        :figwheel     true
-                        :compiler     {:main                 cljs.user
-                                       :asset-path           "js/compiled/dev"
-                                       :output-to            "resources/public/js/compiled/fulcro-todomvc.js"
-                                       :output-dir           "resources/public/js/compiled/dev"
-                                       :recompile-dependents true
-                                       :preloads             [devtools.preload]
-                                       :optimizations        :none}}
-                       {:id           "i18n"
+  ; Notes  on production build:
+  ; - The hot code reload stuff in the dev profile WILL BREAK ADV COMPILATION. So, make sure you
+  ; use `lein with-profile production cljsbuild once production` to build!
+  :cljsbuild {:builds [{:id           "production"
                         :source-paths ["src/main"]
-                        :compiler     {:main          fulcro-todomvc.client-main-production
-                                       :output-to     "i18n/out/compiled.js"
-                                       :output-dir    "i18n/out"
-                                       :optimizations :whitespace}}
-                       {:id           "test"
-                        :source-paths ["src/main" "src/test"]
-                        :figwheel     {:on-jsload fulcro-todomvc.test-runner/on-load}
-                        :compiler     {:main                 fulcro-todomvc.test-runner
-                                       :asset-path           "js/test"
-                                       :recompile-dependents true
-                                       :preloads             [devtools.preload]
-                                       :output-to            "resources/public/js/test/test.js"
-                                       :output-dir           "resources/public/js/test"}}
-                       {:id           "automated-tests"
-                        :source-paths ["src/main" "src/test"]
-                        :compiler     {:output-to     "resources/private/js/unit-tests.js"
-                                       :main          fulcro-todomvc.all-tests
-                                       :asset-path    "js"
-                                       :output-dir    "resources/private/js"
-                                       :optimizations :none}}
-                       {:id           "support"
-                        :source-paths ["src/main"]
-                        :figwheel     true
-                        :compiler     {:main                 fulcro-todomvc.support-viewer
-                                       :asset-path           "js/compiled/support"
-                                       :output-to            "resources/public/js/compiled/support.js"
-                                       :output-dir           "resources/public/js/compiled/support"
-                                       :preloads             [devtools.preload]
-                                       :recompile-dependents true
-                                       :optimizations        :none}}
+                        :jar          true
+                        :compiler     {:asset-path    "js/prod"
+                                       :optimizations :advanced
+                                       :source-map    "resources/public/js/fulcro-todomvc.js.map"
+                                       :output-dir    "resources/public/js/prod"
+                                       :output-to     "resources/public/js/fulcro-todomvc.js"}}]}
 
-                       {:id           "production"
-                        :source-paths ["src/main"]
-                        :compiler     {:verbose         true
-                                       :main            fulcro-todomvc.client-main-production
-                                       :output-to       "resources/public/js/compiled/fulcro-todomvc.min.js"
-                                       :output-dir      "resources/public/js/compiled"
-                                       :pretty-print    false
-                                       :closure-defines {goog.DEBUG false}
-                                       :source-map      "resources/public/js/compiled/fulcro-todomvc.min.js.map"
-                                       :elide-asserts   true
-                                       :optimizations   :advanced}}]}
+  :profiles {:uberjar    {:main           fulcro-todomvc.server-main
+                          :aot            :all
+                          :jar-exclusions [#"public/js/prod" #"com/google.*js$"]
+                          :prep-tasks     ["clean" ["clean"]
+                                           "compile" ["with-profile" "production" "cljsbuild" "once" "production"]]}
+             :production {}
+             :dev        {:source-paths ["src/dev" "src/main" "src/test" "src/cards"]
 
-  :figwheel {:css-dirs    ["resources/public/css"]
-             :server-port 2345}
+                          :jvm-opts     ["-XX:-OmitStackTraceInFastThrow" "-client" "-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"
+                                         "-Xmx1g" "-XX:+UseConcMarkSweepGC" "-XX:+CMSClassUnloadingEnabled" "-Xverify:none"]
 
-  :profiles {
-             :dev {
-                   :source-paths ["src/main" "dev/client" "dev/server"]
-                   :repl-options {
-                                  :init-ns          user
-                                  :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]
-                                  :port             7001
-                                  }
-                   :env          {:dev true}
-                   :dependencies [[figwheel-sidecar "0.5.14" :exclusions [ring/ring-core]]
-                                  [binaryage/devtools "0.9.7" :exclusions [environ]]
-                                  [com.cemerick/piggieback "0.2.2"]
-                                  [org.clojure/tools.nrepl "0.2.13"]]}})
+                          :doo          {:build "automated-tests"
+                                         :paths {:karma "node_modules/karma/bin/karma"}}
+
+                          :figwheel     {:css-dirs ["resources/public/css"]}
+
+                          :test-refresh {:report       fulcro-spec.reporters.terminal/fulcro-report
+                                         :with-repl    true
+                                         :changes-only true}
+
+                          :cljsbuild    {:builds
+                                         [{:id           "dev"
+                                           :figwheel     {:on-jsload "cljs.user/mount"}
+                                           :source-paths ["src/dev" "src/main"]
+                                           :compiler     {:asset-path           "js/dev"
+                                                          :main                 cljs.user
+                                                          :optimizations        :none
+                                                          :output-dir           "resources/public/js/dev"
+                                                          :output-to            "resources/public/js/fulcro-todomvc.js"
+                                                          :preloads             [devtools.preload]
+                                                          :source-map-timestamp true}}
+                                          {:id           "support"
+                                           :source-paths ["src/main"]
+                                           :figwheel     true
+                                           :compiler     {:main                 fulcro-todomvc.support-viewer
+                                                          :asset-path           "js/support"
+                                                          :output-to            "resources/public/js/support.js"
+                                                          :output-dir           "resources/public/js/support"
+                                                          :preloads             [devtools.preload]
+                                                          :recompile-dependents true
+                                                          :optimizations        :none}}
+                                          {:id           "i18n" ;for gettext string extraction
+                                           :source-paths ["src/main"]
+                                           :compiler     {:asset-path    "i18n"
+                                                          :main          fulcro-todomvc.client-main
+                                                          :optimizations :whitespace
+                                                          :output-dir    "i18n/tmp"
+                                                          :output-to     "i18n/i18n.js"}}
+                                          {:id           "test"
+                                           :source-paths ["src/test" "src/main"]
+                                           :figwheel     {:on-jsload "fulcro-todomvc.client-test-main/client-tests"}
+                                           :compiler     {:asset-path    "js/test"
+                                                          :main          fulcro-todomvc.client-test-main
+                                                          :optimizations :none
+                                                          :output-dir    "resources/public/js/test"
+                                                          :output-to     "resources/public/js/test/test.js"
+                                                          :preloads      [devtools.preload]}}
+                                          {:id           "automated-tests"
+                                           :source-paths ["src/test" "src/main"]
+                                           :compiler     {:asset-path    "js/ci"
+                                                          :main          fulcro-todomvc.CI-runner
+                                                          :optimizations :none
+                                                          :output-dir    "resources/private/js/ci"
+                                                          :output-to     "resources/private/js/unit-tests.js"}}
+                                          {:id           "cards"
+                                           :figwheel     {:devcards true}
+                                           :source-paths ["src/main" "src/cards"]
+                                           :compiler     {:asset-path           "js/cards"
+                                                          :main                 fulcro-todomvc.cards
+                                                          :optimizations        :none
+                                                          :output-dir           "resources/public/js/cards"
+                                                          :output-to            "resources/public/js/cards.js"
+                                                          :preloads             [devtools.preload]
+                                                          :source-map-timestamp true}}]}
+
+                          :plugins      [[lein-cljsbuild "1.1.7"]
+                                         [lein-doo "0.1.7"]
+                                         [com.jakemccrary/lein-test-refresh "0.17.0"]]
+
+                          :dependencies [[binaryage/devtools "0.9.7"]
+                                         [org.clojure/tools.namespace "0.3.0-alpha4"]
+                                         [org.clojure/tools.nrepl "0.2.13"]
+                                         [com.cemerick/piggieback "0.2.2"]
+                                         [lein-doo "0.1.7" :scope "test"]
+                                         [figwheel-sidecar "0.5.14" :exclusions [org.clojure/tools.reader]]
+                                         [devcards "0.2.4" :exclusions [cljsjs/react cljsjs/react-dom]]]
+                          :repl-options {:init-ns          user
+                                         :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}}})
